assets/deployments/operations/operation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operations
  labels:
    app: operations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operations
  template:
    metadata:
      labels:
        app: operations
    spec:
      containers:
        - image: 279559645400.dkr.ecr.us-west-1.amazonaws.com/solui/operations-view:G8R2i020
          name: operations
          imagePullPolicy: Always
          ports:
            - containerPort: 5010
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /sf-technician/health
              port: 5010
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /opt/ibaset/solumina-web-operations/config/.env
              subPath: .env
              name: operations-mount

      volumes:
        - name: operations-mount
          configMap:
            defaultMode: 420
            items:
              - key: operationsconfig
                path: .env
            name: operations-cm
