assets/deployments/operations/operations-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: operations
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.backend.loadbalancer.stickiness=true
spec:
  rules:
  - host: --DNS_NAME--
    http:
      paths:
      - path: /sf-technician
        backend:
          serviceName: operations
          servicePort: 5010
